<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <!-- Sidebar Navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sidebar"
        android:layout_width="@dimen/sidebar_width"
        android:layout_height="0dp"
        android:background="@color/white"
        android:paddingTop="@dimen/sidebar_padding_vertical"
        android:paddingBottom="@dimen/sidebar_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Top Nav Items Container -->
        <LinearLayout
            android:id="@+id/nav_top_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Home Nav Item -->
            <ImageButton
                android:id="@+id/nav_home"
                android:layout_width="@dimen/sidebar_item_size"
                android:layout_height="@dimen/sidebar_item_size"
                android:layout_marginBottom="@dimen/sidebar_item_gap"
                android:src="@drawable/ic_nav_home"
                android:background="@drawable/bg_nav_item_selected"
                android:contentDescription="@string/nav_home"
                android:clickable="true"
                android:focusable="true" />

            <!-- Music Nav Item -->
            <ImageButton
                android:id="@+id/nav_music"
                android:layout_width="@dimen/sidebar_item_size"
                android:layout_height="@dimen/sidebar_item_size"
                android:layout_marginBottom="@dimen/sidebar_item_gap"
                android:src="@drawable/ic_nav_music"
                android:background="@drawable/bg_nav_item_normal"
                android:contentDescription="@string/nav_music"
                android:clickable="true"
                android:focusable="true" />

            <!-- Notifications Nav Item -->
            <ImageButton
                android:id="@+id/nav_notifications"
                android:layout_width="@dimen/sidebar_item_size"
                android:layout_height="@dimen/sidebar_item_size"
                android:src="@drawable/ic_nav_bell"
                android:background="@drawable/bg_nav_item_normal"
                android:contentDescription="@string/nav_notifications"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <!-- Settings Nav Item (at bottom) -->
        <ImageButton
            android:id="@+id/nav_settings"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:src="@drawable/ic_nav_settings"
            android:background="@drawable/bg_nav_item_normal"
            android:contentDescription="@string/nav_settings"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Nav Host Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation"
        app:layout_constraintStart_toEndOf="@id/sidebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
